# nio

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/client/: .dockerignore  Dockerfile  package.json
apps/client/app/: globals.css  page.tsx
apps/client/app/booster-role/: ClaimForm.tsx  page.tsx
apps/client/lib/: api.ts  types.ts
apps/server/: Dockerfile  docker-compose.yml  jest.config.js  package-lock.json  package.json  system-prompt.md
apps/server/prisma/: schema.prisma
apps/server/src/: app.module.ts  main.ts
docs/superpowers/plans/: 2026-07-10-discord-agent-audit-tools.md  2026-07-10-godmode-agent-tool.md
docs/superpowers/specs/: 2026-07-10-discord-agent-audit-tools-design.md  2026-07-10-godmode-agent-tool-design.md
scripts/: migrate-postgres-db.sh
services/analytics-engine/: Cargo.toml  Dockerfile  build.rs
services/analytics-engine/proto/analytics/v1/: analytics.proto
services/analytics-engine/src/: aggregator.rs  db.rs  main.rs
services/anomaly-engine/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
services/anomaly-engine/proto/anomaly/v1/: anomaly.proto
services/anomaly-engine/src/: detectors.rs  lib.rs  main.rs  server.rs  state.rs
services/anomaly-engine/tests/: anomaly_decisions.rs
services/slowmode-engine/: .dockerignore  Cargo.toml  Dockerfile
services/slowmode-engine/src/: engine.rs  http.rs  lib.rs  main.rs  state.rs  types.rs
services/slowmode-engine/tests/: slowmode_decisions.rs
(+126 files in other folders)
