[package]
name = "nio-anomaly-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["transport", "codegen"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"

[build-dependencies]
tonic-build = "0.11"
